--- a/ESJsonFormatForMac/Controller/ESInputJsonController.xib
+++ b/ESJsonFormatForMac/Controller/ESInputJsonController.xib
@@ -401,13 +401,13 @@
                         <rect key="frame" x="664" y="40" width="220" height="491"/>
                         <subviews>
                             <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9fW-dT-lXs">
-                                <rect key="frame" x="-2" y="417" width="224" height="24"/>
+                                <rect key="frame" x="-2" y="417" width="223" height="24"/>
                                 <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="EM3-2T-I18">
                                     <font key="font" metaFont="system"/>
                                     <segments>
                                         <segment label="Swift"/>
                                         <segment label="Object-C" selected="YES" tag="1"/>
-                                        <segment label="TypeScripe"/>
+                                        <segment label="TypeScript"/>
                                     </segments>
                                 </segmentedCell>
                                 <connections>
@@ -415,7 +415,7 @@
                                 </connections>
                             </segmentedControl>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Qji-MD-Noo">
-                                <rect key="frame" x="-6" y="361" width="233" height="32"/>
+                                <rect key="frame" x="-6" y="361" width="232" height="32"/>
                                 <buttonCell key="cell" type="push" title="Copy .h || .swift || .ts" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="PHx-8j-cUU">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -469,7 +469,7 @@
                                 </connections>
                             </button>
                             <textField verticalHuggingPriority="750" tag="666" translatesAutoresizingMaskIntoConstraints="NO" id="dNY-x6-sCS">
-                                <rect key="frame" x="5" y="145" width="211" height="40"/>
+                                <rect key="frame" x="5" y="145" width="210" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="GM3-0Y-Eyf"/>
                                 </constraints>
@@ -480,7 +480,7 @@
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dcK-H9-JYv">
-                                <rect key="frame" x="76" y="57" width="70" height="32"/>
+                                <rect key="frame" x="75" y="57" width="70" height="32"/>
                                 <buttonCell key="cell" type="push" title="Start" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="aeX-a5-hlQ">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
